overflow fix

--- a/main.css
+++ b/main.css
@@ -221,7 +221,6 @@ select {
           flex-wrap: wrap;
   -webkit-justify-content: flex-start;
           justify-content: flex-start;
-  overflow: hidden;
   padding-bottom: 1em;
 }
 @media screen and (max-width: 50em) {
