--- a/sass/components/responsive-nav/_responsive-nav.scss
+++ b/sass/components/responsive-nav/_responsive-nav.scss
@@ -50,7 +50,7 @@ $submenu-toggle-event-bg-color: transparent;
   flex-direction: row;
   flex-wrap: wrap; // Use wrap-reverse to place links above header
   justify-content: flex-start; // Right-align large screen menu: space-between;
-  overflow: hidden;
+  // overflow: hidden;
   padding-bottom: 1em;
 
   @media screen and (max-width: $responsive-nav-breakpoint) {
